2002-08-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-check-header-tags): Ignore case of tags.
	(w3m-about-db-history): Accept range specification in URL.
	(w3m-db-history-display-size): New option.
	(w3m-db-history): Refer it.

	* w3m-antenna.el (w3m-antenna-html-skeleton): Add link to
	about://antenna-edit/.
	(w3m-about-antenna-edit): New function.  This is an experimental
	imprement of the editor for Antenna sites.

2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (char-after): Byte-optimize it for old Emacsen.
	(char-before): Ditto.

2002-08-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-mhonarc-rot13-table): New
	constant.
	(shimbun-mhonarc-rot13-decode): New function.
	(shimbun-make-contents): Call the above function to decode the
	field of X-From-R13.

2002-08-23  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-view-this-url-new-session-in-background):
	New user option.
	(w3m-view-this-url-1): Use it; enclose `w3m-goto-url' with
	`save-window-excursion'.

	* w3m-form.el (w3m-form-resume): Confirm `value' for text form
	is a string.

2002-08-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (ffap-url-regexp): Fix last change.

2002-08-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (ffap-url-regexp): Modify the value to make it match to
	nntp urls.

2002-08-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (very-slow): New rule.

	* attic/addpath.el: New file.

2002-08-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el: Require `cl' when compiling to provide the function
	`gensym'.  It is needed to byte-compile this file alone because of
	the w3m-proc macros.
	* w3m-image.el: Ditto.
	* w3m-bitmap.el: Don't bother to load cl-macs.

2002-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-display-message-enable-logging): New variable.
	(w3m-display-message): Use it.

2002-08-21  Hideyuki SHIRAI  <shirai@meadowy.org>
