@@ -1,3 +1,13 @@
+2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-delete-other-buffers): New user command.
+	(w3m-lynx-like-map): Bind the key `C-c w' to the command
+	`w3m-delete-other-buffers'.
+	(w3m-info-like-map): Ditto.
+	(w3m-select-buffer-mode-map): Bind the key to the command
+	`w3m-select-buffer-delete-other-buffers'.
+	(w3m-select-buffer-delete-other-buffers): New user command.
+
 2002-08-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-check-header-tags): Ignore case of tags.
